add batch delete
