# gen/server/restapi/operations/deletefiles.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// DeletefilesHandlerFunc turns a function with the right signature into a deletefiles handler
+type DeletefilesHandlerFunc func(DeletefilesParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn DeletefilesHandlerFunc) Handle(params DeletefilesParams) middleware.Responder {
+	return fn(params)
+}
+
+// DeletefilesHandler interface for that can handle valid deletefiles params
+type DeletefilesHandler interface {
+	Handle(DeletefilesParams) middleware.Responder
+}
+
+// NewDeletefiles creates a new http.Handler for the deletefiles operation
+func NewDeletefiles(ctx *middleware.Context, handler DeletefilesHandler) *Deletefiles {
+	return &Deletefiles{Context: ctx, Handler: handler}
+}
+
+/*
+	Deletefiles swagger:route DELETE /v1/files deletefiles
+
+Deletefiles deletefiles API
+*/
+type Deletefiles struct {
+	Context *middleware.Context
+	Handler DeletefilesHandler
+}
+
+func (o *Deletefiles) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewDeletefilesParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
