# gen/server/restapi/operations/deletefiles_parameters.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/validate"
+
+	"github.com/wangkebin/kbds-ref-restapi/gen/server/models"
+)
+
+// NewDeletefilesParams creates a new DeletefilesParams object
+//
+// There are no default values defined in the spec.
+func NewDeletefilesParams() DeletefilesParams {
+
+	return DeletefilesParams{}
+}
+
+// DeletefilesParams contains all the bound params for the deletefiles operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters deletefiles
+type DeletefilesParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*list of file info to delete
+	  Required: true
+	  In: body
+	*/
+	Files models.Files
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewDeletefilesParams() beforehand.
+func (o *DeletefilesParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body models.Files
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("files", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("files", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(r.Context())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Files = body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("files", "body", ""))
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
