# gen/server/restapi/operations/deletefiles_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/wangkebin/kbds-ref-restapi/gen/server/models"
+)
+
+// DeletefilesOKCode is the HTTP code returned for type DeletefilesOK
+const DeletefilesOKCode int = 200
+
+/*
+DeletefilesOK Successfully deleted the list of fileinfo resources
+
+swagger:response deletefilesOK
+*/
+type DeletefilesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload int64 `json:"body,omitempty"`
+}
+
+// NewDeletefilesOK creates DeletefilesOK with default headers values
+func NewDeletefilesOK() *DeletefilesOK {
+
+	return &DeletefilesOK{}
+}
+
+// WithPayload adds the payload to the deletefiles o k response
+func (o *DeletefilesOK) WithPayload(payload int64) *DeletefilesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the deletefiles o k response
+func (o *DeletefilesOK) SetPayload(payload int64) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeletefilesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*
+DeletefilesDefault generic error response
+
+swagger:response deletefilesDefault
+*/
+type DeletefilesDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewDeletefilesDefault creates DeletefilesDefault with default headers values
+func NewDeletefilesDefault(code int) *DeletefilesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &DeletefilesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the deletefiles default response
+func (o *DeletefilesDefault) WithStatusCode(code int) *DeletefilesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the deletefiles default response
+func (o *DeletefilesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the deletefiles default response
+func (o *DeletefilesDefault) WithPayload(payload *models.Error) *DeletefilesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the deletefiles default response
+func (o *DeletefilesDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeletefilesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
