# gen/server/restapi/operations/kbds_ref_restapi_api.go
@@ -45,6 +45,9 @@ func NewKbdsRefRestapiAPI(spec *loads.Document) *KbdsRefRestapiAPI {
 		DeleteHandler: DeleteHandlerFunc(func(params DeleteParams) middleware.Responder {
 			return middleware.NotImplemented("operation Delete has not yet been implemented")
 		}),
+		DeletefilesHandler: DeletefilesHandlerFunc(func(params DeletefilesParams) middleware.Responder {
+			return middleware.NotImplemented("operation Deletefiles has not yet been implemented")
+		}),
 		DuplicatesHandler: DuplicatesHandlerFunc(func(params DuplicatesParams) middleware.Responder {
 			return middleware.NotImplemented("operation Duplicates has not yet been implemented")
 		}),
@@ -95,6 +98,8 @@ type KbdsRefRestapiAPI struct {
 
 	// DeleteHandler sets the operation handler for the delete operation
 	DeleteHandler DeleteHandler
+	// DeletefilesHandler sets the operation handler for the deletefiles operation
+	DeletefilesHandler DeletefilesHandler
 	// DuplicatesHandler sets the operation handler for the duplicates operation
 	DuplicatesHandler DuplicatesHandler
 	// FilesHandler sets the operation handler for the files operation
@@ -182,6 +187,9 @@ func (o *KbdsRefRestapiAPI) Validate() error {
 
 	if o.DeleteHandler == nil {
 		unregistered = append(unregistered, "DeleteHandler")
+	}
+	if o.DeletefilesHandler == nil {
+		unregistered = append(unregistered, "DeletefilesHandler")
 	}
 	if o.DuplicatesHandler == nil {
 		unregistered = append(unregistered, "DuplicatesHandler")
@@ -287,6 +295,10 @@ func (o *KbdsRefRestapiAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/v1/delete/{fileid}"] = NewDelete(o.context, o.DeleteHandler)
+	if o.handlers["DELETE"] == nil {
+		o.handlers["DELETE"] = make(map[string]http.Handler)
+	}
+	o.handlers["DELETE"]["/v1/files"] = NewDeletefiles(o.context, o.DeletefilesHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
